# OmniGlass

./: .gitignore  CLAUDE.md  README.md  confirm-dialog.html  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: build-release.yml  build.yml
docs/: week2-edge-cases.md
docs/planning/: OMNI_GLASS_PHASE2B_BRIEF.md  OMNI_GLASS_PHASE2C_BRIEF.md  OMNI_GLASS_PHASE3_PRD.md  OMNI_GLASS_WEEK3_BRIEF.md
src/: action-menu-results.ts  action-menu.ts  confirm-dialog.ts  main.ts  overlay.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pipeline.rs  settings_commands.rs  tray.rs
src-tauri/src/capture/: README.md  mod.rs  region.rs  screenshot.rs
src-tauri/src/llm/: README.md  classify.rs  execute.rs  gemini.rs  local.rs  mod.rs  prompts_execute.rs  provider.rs  streaming.rs
src-tauri/src/ocr/: README.md  apple_vision.rs  mod.rs  windows_ocr.rs
src-tauri/src/safety/: README.md  command_check.rs  mod.rs  redact.rs
standards/: 00-manifest.md  01-architecture.md  02-coding-practices.md  03-documentation.md
test-corpus/: README.md
tools/ocr-bench/: Cargo.toml  README.md  build.rs
tools/ocr-bench/src/: main.rs
tools/ocr-bench/swift-src/: ocr.swift
